fixed clusters being outside of sector, added scrollbars

--- a/web_app/static/style/map.css
+++ b/web_app/static/style/map.css
@@ -17,3 +17,14 @@
     stroke-linecap: round;
     vector-effect: non-scaling-stroke;
 }
+
+
+.graticule {
+  fill: none;
+  stroke: #333;
+  stroke-width: .7px;
+  stroke-opacity: .5;
+}
+.graticule.outline {
+  stroke-width: 2px;
+}
